# feature-selection-for-multi-table-data

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt
DATA/Accident/: noisy_dictionary.kdic
fs4mt/: class_UnivariateMultitableAnalysis.py  class_VariableSelectionStatistics.py
notebook/: etude_dataset_accident_star_variables.ipynb
